One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@
 </b> this is me <b/>
 
 <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ> click me</a>
+&nbsp; &nbsp; <img src="img/one_over_x_cubed.jpg" alt="one over x cubed.">
