One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,29 @@
 <!doctype html>
+</html>
+<head>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        .imgbox {
+            display: grid;
+            height: 100%;
+        }
+        .center-fit {
+            max-width: 100%;
+            max-height: 100vh;
+            margin: auto;
+        }
+    </style>
+</head>
+<body>
 
 </b> this is me <b/>
 
 <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ> click me</a>
-&nbsp; &nbsp; <img src="img/one_over_x_cubed.jpg" alt="one over x cubed.">
+<div class="imgbox">
+&nbsp; &nbsp; <img class="center-fit" src="img/one_over_x_cubed.jpg" alt="one over x cubed.">
+</div>
+</body>
+</html>
