One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
 <div class="imgbox">
 &nbsp; &nbsp; <img class="center-fit" src="img/one_over_x_cubed.jpg" alt="one over x cubed.">
 </div>
+	<p>
+<div>
+<a href=https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a>$\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$</a>
+</div>
 </body>
 </html>
