One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,40 @@
         }
     </style>
 </head>
+
+        <link rel="stylesheet" type="text/css" href="https://cdn.sstatic.net/Shared/Channels/channels.css?v=5981bb1a5bd7">
+
+
+        <script src="https://cdn.sstatic.net/Js/third-party/citation-helper.js?v=a4ec380e29ba"></script>
+
+
+        <script type="text/x-mathjax-config">
+            MathJax.Hub.Config({
+                "HTML-CSS": {
+                    preferredFont: "TeX",
+                    availableFonts: ["STIX", "TeX"],
+                    linebreaks: { automatic: true },
+                    EqnChunk: (MathJax.Hub.Browser.isMobile ? 10 : 50)
+                },
+                tex2jax: {
+                    inlineMath: [["$", "$"], ["\\\\(","\\\\)"]],
+                    displayMath: [["$$", "$$"], ["\\[", "\\]"]],
+                    processEscapes: true,
+                    ignoreClass: "tex2jax_ignore|dno"
+                },
+                TeX: {
+                    extensions: ["begingroup.js"],
+                    noUndefined: { attributes: { mathcolor: "red", mathbackground: "#FFEEEE", mathsize: "90%" } },
+                    Macros: { href: "{}" }
+                },
+                messageStyle: "none",
+                styles: { ".MathJax_Display, .MathJax_Preview, .MathJax_Preview > *": { "background": "inherit" } },
+                SEEditor: "mathjaxEditing"
+            });
+        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS_HTML-full"></script>
+
+
 <body>
 
 </b> this is me <b/>
@@ -27,6 +61,7 @@
 </div>
 	<p>
 <div>
+	<br><br>
 <a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">$\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$</a>
 </div>
 </body>
