One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<p>
 <div>
 	<br><br>
-<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">$\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$</a>
+&nbsp; &nbsp; $\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$ &nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a>
 </div>
 </body>
 </html>
