One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 <div>
 	<br><br>
 &nbsp; &nbsp; $\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$ &nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a>
+	<br><br>
+&nbsp; &nbsp; $\lim_{x\to-2}\frac{x-1}{x+1}=3$ &nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1187971/using-epsilon-delta-definition-to-prove-that-lim-x-to-2-fracx-1x1">Discussion and Solution</a>
 </div>
 </body>
 </html>
