One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
 	<p>
 <div>
 	<br><br>
-&nbsp; &nbsp; $\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$ &nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a>
+	<p>
+$$
+$\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$ 
+$$
+&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a>
 	<br><br>
-	<p>Prove
+	<p>
 $$
 \lim_{x\rightarrow -2} \frac{x-1}{x+1}=3.
 $$</p>
