--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@
 
 <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ> click me</a>
 	<p>
-$$
-\lim\limits_{x \to 2}$ $\frac{1}{x^3}$ = $\frac{1}{8}. 
-$$</p>
+$$\lim_{x\to 2} \frac{1}x^3 = \frac{1}{8}1$$.
+</p>
 <div class="imgbox">
 &nbsp; &nbsp; <img class="center-fit" src="img/one_over_x_cubed.jpg" alt="one over x cubed.">
 </div>
@@ -68,9 +67,7 @@ $$</p>
 <div>
 	<br><br>
 	<p>
-$$
-\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}. 
-$$</p>
+$\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}$.  </p>
 &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a>
 	<br><br>
 	<p>
