One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -64,9 +64,12 @@ $$\lim_{x\to 2} \frac{1}x^3 = \frac{1}{8}$$.
 &nbsp; &nbsp; <img class="center-fit" src="img/one_over_x_cubed.jpg" alt="one over x cubed.">
 </div>
 <div>
-	<br><br>
 	<p>
-$\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}$.  </p>
+<!--&nbsp; &nbsp;&nbsp; &nbsp;  $\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}$.  </p>
+-->
+<blockquote>
+  <p>$\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$</p>
+</blockquote>
 &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a>
 	<br><br>
 	<p>
