One Over x Cubed.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 <a href=https://www.youtube.com/watch?v=dQw4w9WgXcQ> click me</a>
 	<p>
-$$\lim_{x\to 2} \frac{1}x^3 = \frac{1}{8}$$.
+	$$\lim_{x\to 2} \frac{1}{x^3} = \frac{1}{8}$$.
 </p>
 <div class="imgbox">
 &nbsp; &nbsp; <img class="center-fit" src="img/one_over_x_cubed.jpg" alt="one over x cubed.">
