--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
 -->
 <blockquote>
   <p>$\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}.$</p>
+  <p>$$\lim\limits_{x \to a} \frac{1}{x} = \frac{1}{a}.$$</p>
 </blockquote>
 &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a>
 	<br><br>
@@ -77,6 +78,12 @@ $$
 \lim_{x\rightarrow -2} \frac{x-1}{x+1}=3.
 $$</p>
 &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1187971/using-epsilon-delta-definition-to-prove-that-lim-x-to-2-fracx-1x1">Discussion and Solution</a>
+</div>
+<div>
+<blockquote>
+  <p>$$\lim\limits_{x \to 1} \frac{1}{x} = 1.$$ </p>
+</blockquote>
+&nbsp; &nbsp; &nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/418961/epsilon-delta-proof-that-lim-limits-x-to-1-frac1x-1?noredirect=1&lq=1">Discussion and Solution</a>
 </div>
 </body>
 </html>
