--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 $$
 \lim_{x\rightarrow -2} \frac{x-1}{x+1}=3.
 $$</p>
-&nbsp; &nbsp; &nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1187971/using-epsilon-delta-definition-to-prove-that-lim-x-to-2-fracx-1x1">Discussion and Solution</a>
+	<div style="text-align:center"> <a href="https://math.stackexchange.com/questions/1187971/using-epsilon-delta-definition-to-prove-that-lim-x-to-2-fracx-1x1">Discussion and Solution</a></div>
 </div>
 <div>
 <blockquote>
