--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 <!--&nbsp; &nbsp;&nbsp; &nbsp;  $\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}$.  </p>
 -->
 <blockquote>
-  <p>$$\lim\limits_{x \to a} \frac{1}{x} = \frac{1}{a}.$$&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a>
+  <p>$$\lim\limits_{x \to a} \frac{1}{x} = \frac{1}{a}.$$&nbsp; &nbsp;&nbsp; &nbsp;
+  <div style="text-align:center">  <a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a></div>
 </p>
 </blockquote>
 	<br><br>
@@ -82,7 +83,7 @@ $$</p>
 <blockquote>
   <p>$$\lim\limits_{x \to 1} \frac{1}{x} = 1.$$ </p>
 </blockquote>
-&nbsp; &nbsp; &nbsp; &nbsp;<a href="https://math.stackexchange.com/questions/418961/epsilon-delta-proof-that-lim-limits-x-to-1-frac1x-1?noredirect=1&lq=1">Discussion and Solution</a>
+	<div style="text-align:center"> <a href="https://math.stackexchange.com/questions/418961/epsilon-delta-proof-that-lim-limits-x-to-1-frac1x-1?noredirect=1&lq=1">Discussion and Solution</a></div>
 </div>
 </body>
 </html>
