--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
 <!--&nbsp; &nbsp;&nbsp; &nbsp;  $\lim\limits_{x \to a}$ $\frac{1}{x}$ = $\frac{1}{a}$.  </p>
 -->
 <blockquote>
-  <p>$$\lim\limits_{x \to a} \frac{1}{x} = \frac{1}{a}.$$&nbsp; &nbsp;&nbsp; &nbsp;
+  <p>$$\lim\limits_{x \to a} \frac{1}{x} = \frac{1}{a}.$$</p>
   <div style="text-align:center">  <a href="https://math.stackexchange.com/questions/1872265/epsilon-delta-proof-lim-limits-x-to-a-frac1x-frac1a">Discussion and Solution</a></div>
-</p>
 </blockquote>
 	<br><br>
 	<p>
