--- a/c.html
+++ b/c.html
@@ -34,6 +34,12 @@
         for(printf("Hi %d\n",i); i <= 3; i++) {
            printf("Hello buddy %d\n", i);
         }
+
+        int j = 1;
+
+        for(printf("Hi %d\n",j); j <= 3; printf("Hello \n")) {
+           j++;
+        }
 </code></pre>
 </div>
 
