--- a/c.html
+++ b/c.html
@@ -40,7 +40,7 @@
         }
 
         int k = 1;
-        for(printf("Hi %d\n",k); k < printf("OK\n",k); printf("increment \n")) { // What if the increment statement not here ??
+        for(printf("Hi %d\n",k); k < printf("OK\n",k); printf("increment \n")) { // What if the increment statement not here ?? What if the condition check statement not here ???
            printf("for block Body %d\n", k);
            k++;
         }
