--- a/c.html
+++ b/c.html
@@ -46,6 +46,23 @@
         }
 </code></pre>
 </div>
+<hr>
+<div>
+    what would happen with the code below
+    <br>
+<pre><code class="language-clike language-c">
+#include &lt;stdio.h&gt;
+int main() {
+    int k = 1;
+    for (; k < 6; k++) ;
+    {
+        printf("hello  %d\n", k);
+    }
+    return 0;
+}
+</code></pre>
+</div>
+
 
 <hr>
 <div>
