--- a/c.html
+++ b/c.html
@@ -58,6 +58,11 @@ int main() {
     {
         printf("hello  %d\n", k);
     }
+
+    int _ = 1;
+    int __ = 2;
+    int ___ = _ + __;
+    printf("%d hello  %d\n", __,  ___);
     return 0;
 }
 </code></pre>
