--- a/c.html
+++ b/c.html
@@ -63,6 +63,10 @@ int main() {
     int __ = 2;
     int ___ = _ + __;
     printf("%d hello  %d\n", __,  ___);
+
+    // WHAT HAPPEN WITH BELOW CODE ??? 
+    // printf("%d hello  %d\n", ++(__ - 1),  --(___ + 2));
+
     return 0;
 }
 </code></pre>
