--- a/c.html
+++ b/c.html
@@ -67,6 +67,9 @@ int main() {
     // WHAT HAPPEN WITH BELOW CODE ??? 
     // printf("%d hello  %d\n", ++(__ - 1),  --(___ + 2));
 
+    // WHAT is the value of e ?
+    int e = __ == ___  - 1;	   
+
     return 0;
 }
 </code></pre>
