--- a/c.html
+++ b/c.html
@@ -74,6 +74,10 @@ int main() {
     ___ = 11;
     int f = !___ > 5;
 
+    // WHAT is the value of g ?
+    ___ = 11;
+    int g = ___  + 010 + 0x20;
+
     return 0;
 }
 </code></pre>
