--- a/c.html
+++ b/c.html
@@ -83,6 +83,23 @@ int main() {
 </code></pre>
 </div>
 
+<hr>
+<div>
+    what is the output here
+    <br>
+<pre><code class="language-clike language-c">
+#include &lt;stdio.h&gt;
+int main() {
+    float a = 1.1;
+    double b = 1.1;
+    if (a == b)
+        printf("a equal to b\n");
+    else
+        printf("not equal \n");
+    return 0;
+}
+</code></pre>
+</div>
 
 <hr>
 <div>
