--- a/c.html
+++ b/c.html
@@ -70,6 +70,10 @@ int main() {
     // WHAT is the value of e ?
     int e = __ == ___  - 1;	   
 
+    // WHAT is the value of d ?
+    int d = 2;   
+    d *= 25 + 33;   
+
     // WHAT is the value of f ?
     ___ = 11;
     int f = !___ > 5;
