--- a/c.html
+++ b/c.html
@@ -59,6 +59,14 @@ int main() {
         printf("hello  %d\n", k);
     }
 
+
+    do
+    {
+        printf("do it here  %d\n", k);
+    }
+    while( -1 > k );  
+
+
     int _ = 1;
     int __ = 2;
     int ___ = _ + __;
