--- a/ifd.html
+++ b/ifd.html
@@ -434,7 +434,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @-webkit-keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 @keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 .r-efm9vo{position:absolute;visibility:hidden;top:0;width:50px;pointer-events:none}
-.r-efm9vo.loaded{visibility:visible;top:50vh;width:50px}</style><title>Infinity Definition</title><meta content="https://abs.twimg.com/responsive-web/client-web/icon-ios.77d25eba.png" property="og:image" data-rh="true">
+.r-efm9vo.loaded{visibility:visible;top:50vh;width:50px}</style><title>Infinite limits</title><meta content="https://abs.twimg.com/responsive-web/client-web/icon-ios.77d25eba.png" property="og:image" data-rh="true">
 </head>
 
 
