Continuity - IVT Math.

--- a/ivt.html
+++ b/ivt.html
@@ -434,8 +434,7 @@ input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-web
 @-webkit-keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 @keyframes r-11cv4x{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 .r-efm9vo{position:absolute;visibility:hidden;top:0;width:50px;pointer-events:none}
-.r-efm9vo.loaded{visibility:visible;top:50vh;width:50px}</style><title>Intermediate Value Theorem (IVT)</title><meta content="https://abs.twimg.com/responsive-web/client-web/icon-ios.77d25eba.png" property="og:image" data-rh="true">
-</head>
+.r-efm9vo.loaded{visibility:visible;top:50vh;width:50px}</style><title>Intermediate Value Theorem (IVT)</title></head>
 
 
 <body style="background-color: rgb(0, 0, 0); scrollbar-color: rgb(62, 65, 68) rgb(22, 24, 28);">
