--- a/sheet.html
+++ b/sheet.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8">
     <!--default-seo-->
-    <title>Final Exam Cheat-Sheet: Memory, Pointers, and Data Structures - Kimi</title>
+    <title>Final Exam Cheat-Sheet: Memory, Pointers, and Data Structures - </title>
     <meta name="keywords" content="Final Exam Cheat-Sheet: Memory, Pointers, and Data Structures,Kimi,Kimi.com,K2,KimiK2,MoonshotAI,Moonshot,Moonshot AI,Large Language Model,Natural Language Processing,AI Large Model,AI Chatbot,AI Chat,AI Creation,Domestic Model Company,AI Assistant,Context Window,context,long,extra-long">
     <meta name="description" content="Try Kimi K2 now, the open‑source trillion‑parameter MoE model, smarter coding, and agentic task automation.">
     <!--default-seo-->
